--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://seeklogo.com/images/D/duckduckgo-logo-A7DC43DC40-seeklogo.com.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>DuckDuckGo — Privacy, simplified.</title>
   </head>
   <body>
     <div id="root"></div>
